# aw_agents

./: .buildinfo  CHANGELOG.md  EXTENSION_ROUTING_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  ORGANIZATION.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  USAGE.md  examples.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup_helper.py  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/aw_agents/: base.html
_modules/aw_agents/adapters/: mcp.html  openapi.html
_modules/aw_agents/agents/download/: agent.html  download_core.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: aw_agents.rst.txt
_sources/module_docs/aw_agents/: adapters.rst.txt  agents.rst.txt  base.rst.txt  util.rst.txt
_sources/module_docs/aw_agents/adapters/: mcp.rst.txt  openapi.rst.txt
_sources/module_docs/aw_agents/agents/: download.rst.txt
_sources/module_docs/aw_agents/agents/download/: agent.rst.txt  download_core.rst.txt
aw_agents/: __init__.py  base.py  util.py
aw_agents/adapters/: __init__.py  mcp.py  openapi.py
aw_agents/agents/: __init__.py
aw_agents/agents/download/: __init__.py  agent.py  demo_download_agent.ipynb  download_core.py
aw_agents/download/: __init__.py  agent.py  demo_download_agent.ipynb  download_core.py
module_docs/: aw_agents.html
module_docs/aw_agents/: adapters.html  agents.html  base.html  util.html
module_docs/aw_agents/adapters/: mcp.html  openapi.html
module_docs/aw_agents/agents/: download.html
module_docs/aw_agents/agents/download/: agent.html  download_core.html
scripts/: deploy_api.py  deploy_mcp.py
tests/: test_download.py  test_extension_routing.py
