[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aw-agents"
version = "0.1.0"
description = "AI agents for agentic workflows, deployable to multiple chatbot platforms"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "agents", "chatbots", "mcp", "openapi", "claude", "chatgpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "graze>=0.1.0",
]

[project.optional-dependencies]
# MCP server support (for Claude)
mcp = [
    "mcp>=0.1.0",
]

# OpenAPI/FastAPI support (for ChatGPT)
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

# All features
all = [
    "aw-agents[mcp,api]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aw-agents"
Documentation = "https://github.com/yourusername/aw-agents#readme"
Repository = "https://github.com/yourusername/aw-agents"
Issues = "https://github.com/yourusername/aw-agents/issues"

[project.scripts]
# CLI tools can be added here
# aw-agent = "aw_agents.cli:main"

[tool.setuptools]
packages = ["aw_agents", "aw_agents.adapters", "aw_agents.download"]

[tool.setuptools.package-data]
aw_agents = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose --cov=aw_agents --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
