[metadata]
name = aw_agents
version = 0.1.1
url = https://github.com/thorwhalen/aw_agents
platforms = any
description_file = README.md
author = Thor Whalen
description = 
		AI agents for agentic workflows
		deployable to multiple chatbot platforms
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
keywords = 
		ai
		agents
		chatbots
		mcp
		openapi
		claude
		chatgpt
classifiers = 
		Development Status :: 3 - Alpha
		Intended Audience :: Developers
		License :: OSI Approved :: MIT License
		Programming Language :: Python :: 3
		Programming Language :: Python :: 3.9
		Programming Language :: Python :: 3.10
		Programming Language :: Python :: 3.11
		Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.9
install_requires = 
	requests>=2.31.0
	beautifulsoup4>=4.12.0
	graze>=0.1.0
	aw>=0.1.0

[options.extras_require]
mcp = 
	mcp>=0.1.0
api = 
	fastapi>=0.109.0
	uvicorn[standard]>=0.27.0
	pydantic>=2.5.0
all = 
	%(mcp)s
	%(api)s
dev = 
	pytest>=7.0.0
	pytest-cov>=4.0.0
	black>=23.0.0
	mypy>=1.0.0
	ruff>=0.1.0
testing = 
		

